--- a/index.html
+++ b/index.html
@@ -64,6 +64,52 @@
     <section id="quienes-somos">
         <div class="container-sobre section-orange flex">
             <div class="foto flex"><img src="./img/mepc.png" alt="MEPC"></div>
+            <div class="portrait-title">
+                <h2>MEPC</h2>
+                <h3>Movimiento Estudiantil por la Psicología Científica</h3>
+            </div>
+            <ul class="network-icon" aria-hidden="true">
+                <li>
+                    <a href="https://www.facebook.com/mepc.oficial/" target="_blank" rel="noopener">
+                        <i class="fas fa-envelope big-icon"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/mepc.oficial/" target="_blank" rel="noopener">
+                        <i class="fab fa-facebook big-icon"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/groups/2641583789449049" target="_blank" rel="noopener">
+                        <i class="fab fa-facebook big-icon"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/mepc.oficial/" target="_blank" rel="noopener">
+                        <i class="fab fa-instagram big-icon"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/MEPC_oficial" target="_blank" rel="noopener">
+                        <i class="fab fa-twitter big-icon"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/channel/UCJpN1ANkID-67MQ2alMek-g" target="_blank" rel="noopener">
+                        <i class="fab fa-youtube big-icon"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://chat.whatsapp.com/LXTB9dRdP2z0d8meLKz1eg" target="_blank" rel="noopener">
+                        <i class="fab fa-whatsapp big-icon"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://chat.whatsapp.com/LWqNQwz5UxhJIJwrArgJ3E" target="_blank" rel="noopener">
+                        <i class="fab fa-whatsapp big-icon"></i>
+                    </a>
+                </li>
+            </ul>
             <div class="text-wrapper flex">
                 <div class="title-section flex">
                     <iframe width="420" height="315" src="https://www.youtube.com/embed/ieSG5JVLOow"></iframe>
