--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
             <ul class="network-icon" aria-hidden="true">
                 <li>
-                    <a href="https://www.facebook.com/mepc.oficial/" target="_blank" rel="noopener">
+                    <a href="mailto:mepc.org@gmail.com" target="_blank" rel="noopener">
                         <i class="fas fa-envelope big-icon"></i>
                     </a>
                 </li>
