--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- ¿Quiénes somos? -->
     <section id="quienes-somos">
         <div class="container-sobre section-orange flex">
-            <div class="foto flex"><img src="./img/mepc.png" alt="MEPC"></div>
+            <div class="foto flex"><img src="./img/avatar.jpg" alt="MEPC"></div>
             <div class="portrait-title">
                 <h2>MEPC</h2>
                 <h3>Movimiento Estudiantil por la Psicología Científica</h3>
