--- a/index.html
+++ b/index.html
@@ -36,15 +36,16 @@
         <nav class="navbar flex">
             <ul class="nav-ul">
                 <li><a href="#quienes-somos">¿Quiénes somos?</a></li>
-                <li><a href="#como-colaborar">¿Cómo colaborar?</a></li>
+                <li><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>
                 <li><a href="#que-estudiamos">¿Qué estudiamos?</a></li>
                 <li><a href="#documentos">Documentos</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
-        <div class="logo">
+        <!--<div class="logo">
             <img id="header-img" src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt="original trombones logo" />
         </div>
+        <!-->
     </header>
 
     <!-- ¿Quiénes somos? -->
@@ -115,6 +116,10 @@
                     <iframe width="420" height="315" src="https://www.youtube.com/embed/ieSG5JVLOow"></iframe>
                 </div>
                 <div class="description">
+                    </br>
+                    <hr>
+                    </br>
+                    </hr>
                     <p>
                         Somos el Movimiento Estudiantil por la Psicología Científica, un grupo de estudiantes y graduadxs autoconvocados de diferentes puntos del país que compartimos un mismo ideal: el desarrollo de una formación y una práctica profesional basadas en fundamentos
                         científicos. Nacimos en la Facultad de Psicología de la Universidad de Buenos Aires y ya sumamos casi 2000 personas de diferentes casas de estudio que creemos que la ciencia es el camino que debemos seguir en psicología para mejorar
