--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
 <body>
     <!-- Navbar -->
     <header class="main-header">
+
         <nav class="navbar flex">
+            <img class="logo" src="./img/logo.svg" alt="logo de la pagina">
             <ul class="nav-ul">
-                <li><a href="#quienes-somos">¿Quiénes somos?</a></li>
+                <li><a href="#">¿Quiénes somos?</a></li>
                 <li><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>
                 <li><a href="#que-estudiamos">¿Qué estudiamos?</a></li>
                 <li><a href="#documentos">Documentos</a></li>
