--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <h1>¿Quiénes somos?</h1>
             </div>
             <div class="subtitle flex">
-                <h2>Somos una organización independiente de estudiantes y graduados, que tenemos como fin promover el pensamiento crítico y la psicología científica, formarnos entre los integrantes en temas afines y reclamar por una formación actualizada,
-                    plural y científica.</h2>
+                <h2>Somos una organización independiente de <br>estudiantes y graduados, que tenemos como<br> fin promover el pensamiento crítico y la<br> psicología científica, formarnos entre los<br> integrantes en temas afines y reclamar por<br> una formación
+                    actualizada, plural y científica.</h2>
             </div>
         </div>
         <div class="container-sobre section-orange flex">
