--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 <li><a href="#documentos">Documentos</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
+            <button class="navbar-toggler aos-init aos-animate" type="button" data-bs-toggle="offcanvas" aria-label="Toggle navigation" data-aos="fade-down" data-aos-duration="600">
+                <a style="color: white;"><img src="img/list.svg"></a>
+            </button>
         </nav>
         <!--<div class="logo">
             <img id="header-img" src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt="original trombones logo" />
@@ -127,25 +130,27 @@
             </div>
         </div>
     </section>
-</body>
 
-<div class="container">
-    <footer class="site-footer">
-        <p class="powered-by">
-            MEPC © 2021
-        </p>
-        <p class="powered-by">
-            Desarrollado por
-            <a href="https://francosbenitez.github.io" target="_blank" rel="noopener">Franco</a>
-            <span class="float-right" aria-hidden="true">
+
+    <div class="container">
+        <footer class="site-footer">
+            <p class="powered-by">
+                MEPC © 2021
+            </p>
+            <p class="powered-by">
+                Desarrollado por
+                <a href="https://francosbenitez.github.io" target="_blank" rel="noopener">Franco</a>
+                <span class="float-right" aria-hidden="true">
       <a href="#" class="back-to-top">
         <span class="button_icon">
           <i class="fas fa-chevron-up fa-2x"></i>
         </span>
-            </a>
-            </span>
-        </p>
-    </footer>
-</div>
+                </a>
+                </span>
+            </p>
+        </footer>
+    </div>
+
+</body>
 
 </html>
