--- a/index.html
+++ b/index.html
@@ -41,16 +41,12 @@
                 <li><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>
                 <li><a href="#que-estudiamos">¿Qué estudiamos?</a></li>
                 <li><a href="#documentos">Documentos</a></li>
-                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
             </ul>
             <button class="navbar-toggler aos-init aos-animate" type="button" data-bs-toggle="offcanvas" aria-label="Toggle navigation" data-aos="fade-down" data-aos-duration="600">
-                <a style="color: white;"><img src="img/list.svg"></a>
+                <a style="color: #004aad;"><img src="img/list.svg"></a>
             </button>
         </nav>
-        <!--<div class="logo">
-            <img id="header-img" src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt="original trombones logo" />
-        </div>
-        <!-->
     </header>
 
     <!-- ¿Quiénes somos? -->
