--- a/contacto.html
+++ b/contacto.html
@@ -1,33 +1,80 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/contacto.css">
+    <title>Contact | Wildan Ghifari - Portfolio</title>
+</head>
 
 <body>
-    <section class="contact">
-        <div id="contact"></div>
-        <header class="subtitle contact-subtitle">
-            <div class="subtitle-inner">
-                <h2 class="subtitle-name">Contact</h2>
-            </div>
-        </header>
-        <form action="" class="form contact-form">
-            <section>
-                <input class="form-input" type="text" name="name" placeholder="Nombre" required>
-            </section>
-            <section>
-                <input class="form-input" type="text" name="asunto" placeholder="Asunto" required>
-            </section>
-            <section>
-                <input class="form-input" type="email" name="name" placeholder="Email" required>
-            </section>
-            <section>
-                <textarea class="form-text" name="mensaje" id="mensaje" placeholder="Message" cols="30" rows="10" required></textarea>
-            </section>
-            <section>
-                <button type="submit" class="form-submit">Enviar</button>
-            </section>
-        </form>
-    </section>
-</body>
+    <main>
+        <header>
+            <nav id="navbar">
+                <div class="logo">
+                    <a href="/"><img src="./img/logo.svg" alt="Logo Wildan Ghifari"></a>
+                </div>
 
+                <ul class="nav-links">
+                    <li><a href="https://wildanghifari.github.io/portfolio/index.html#services">Services</a></li>
+                    <li><a href="https://wildanghifari.github.io/portfolio/#projects">Works</a></li>
+                    <li><a href="https://wildanghifari.github.io/portfolio/#resources">Resources</a></li>
+                    <li><a class="ctaButton" href="#">Let's Talk</a></li>
+                </ul>
+                <div class="burger">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+            </nav>
+        </header>
+
+        <section id="contact">
+            <p>For new collaborations or commissions, please email:</p>
+            <h2>wildghifari@gmail.com</h2>
+            <form action="">
+                <h3 style="margin-bottom: 32px;">Get in touch now!</h3>
+                <div class="form-group">
+                    <label for="name">Fullname</label>
+                    <input type="text" name="name" id="name" placeholder="Enter your fullname">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" placeholder="your@mail.com">
+                </div>
+                <div class="form-group">
+                    <label for="message">Your Massage</label>
+                    <textarea class="input-textarea" name="message" id="message"></textarea>
+                </div>
+
+                <button type="submit">Submit</button>
+            </form>
+        </section>
+
+        <footer>
+            <img src="assets/img/3d_char.png" alt="" height="72">
+
+            <div class="contact">
+                <h2>
+                    Drop me a <a href="/contact.html">message</a> for any collaborations or commissions.
+                </h2>
+            </div>
+
+            <div class="socMed">
+                <a href="https://dribbble.com/wildant"><i class="fa fa-dribbble fa-lg" aria-hidden="true"></i></a>
+                <a href="https://github.com/wildanGhifari"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com/wildan.ghifari/"><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a>
+            </div>
+
+            <div class="copyRight">
+                <p>Copyright &#169; 2021 Wildan Ghifari. All rights reserved.</p>
+            </div>
+        </footer>
+    </main>
+
+    <script src="https://kit.fontawesome.com/1213d3b612.js" crossorigin="anonymous"></script>
+    <script src="js/navbar.js"></script>
+</body>
 
 </html>
