improving html & css!

--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
         </nav>
     </header>
 
-    <!-- Home -->
     <section id="quienes-somos">
-        <div class="container-home section-blue flex">
+
+        <!-- Hero -->
+        <div class="container-hero section-blue flex">
             <div class="title flex">
                 <h1>¿Quiénes somos?</h1>
             </div>
@@ -65,20 +66,22 @@
                     actualizada, plural y científica.</h2>
             </div>
         </div>
+
+        <!-- About -->
         <div class="container-about flex">
             <div class="avatar"><img src="./img/avatar.jpg" alt="avatar de MEPC">
                 <div class="avatar-description">
                     <h2>MEPC</h2>
                     <h3>Movimiento Estudiantil por la Psicología Científica</h3>
                     <ul class="network-icon flex" aria-hidden="true">
-                        <li><a href="mailto:mepc.org@gmail.com" target="_blank" rel="noopener"><i class="fas fa-envelope big-icon"></i></a></li>
-                        <li><a href="https://www.facebook.com/mepc.oficial/" target="_blank" rel="noopener"><i class="fab fa-facebook big-icon"></i></a></li>
-                        <li><a href="https://www.facebook.com/groups/2641583789449049" target="_blank" rel="noopener"><i class="fab fa-facebook big-icon"></i></a></li>
-                        <li><a href="https://www.instagram.com/mepc.oficial/" target="_blank" rel="noopener"><i class="fab fa-instagram big-icon"></i></a></li>
-                        <li><a href="https://twitter.com/MEPC_oficial" target="_blank" rel="noopener"><i class="fab fa-twitter big-icon"></i></a></li>
-                        <li><a href="https://www.youtube.com/channel/UCJpN1ANkID-67MQ2alMek-g" target="_blank" rel="noopener"><i class="fab fa-youtube big-icon"></i></a></li>
-                        <li><a href="https://chat.whatsapp.com/LXTB9dRdP2z0d8meLKz1eg" target="_blank" rel="noopener"><i class="fab fa-whatsapp big-icon"></i></a></li>
-                        <li><a href="https://chat.whatsapp.com/LWqNQwz5UxhJIJwrArgJ3E" target="_blank" rel="noopener"><i class="fab fa-whatsapp big-icon"></i></a></li>
+                        <li><a href="mailto:mepc.org@gmail.com" target="_blank"><i class="fas fa-envelope fa-2x"></i></a></li>
+                        <li><a href="https://www.facebook.com/mepc.oficial/" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
+                        <li><a href="https://www.facebook.com/groups/2641583789449049" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
+                        <li><a href="https://www.instagram.com/mepc.oficial/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a></li>
+                        <li><a href="https://twitter.com/MEPC_oficial" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></li>
+                        <li><a href="https://www.youtube.com/channel/UCJpN1ANkID-67MQ2alMek-g" target="_blank" rel="noopener"><i class="fab fa-youtube fa-2x"></i></a></li>
+                        <li><a href="https://chat.whatsapp.com/LXTB9dRdP2z0d8meLKz1eg" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a></li>
+                        <li><a href="https://chat.whatsapp.com/LWqNQwz5UxhJIJwrArgJ3E" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a></li>
                     </ul>
                 </div>
             </div>
