--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                 <li><a href="./documentos.html">Documentos</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
             </ul>
-            <div class="burger">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
+            <div class="button">
+                <div class="line-1"></div>
+                <div class="line-2"></div>
+                <div class="line-3"></div>
             </div>
         </nav>
     </header>
