:bomb: :bomb: :bomb:

--- a/documentos.html
+++ b/documentos.html
@@ -43,33 +43,33 @@
         <div class="ul-container">
             <ul>
                 <li class="hvr-sweep-to-top">
-                    <a class="nav-link" href="#Introduction">Departamentos</a>
+                    <a class="nav-link" href="#departamentos">Departamentos</a>
                 </li>
                 <li class="hvr-sweep-to-top">
-                    <a class="nav-link" href="#CSS_syntax">Delegados</a>
+                    <a class="nav-link" href="#delegados">Delegados</a>
                 </li>
                 <li class="hvr-sweep-to-top">
-                    <a class="nav-link" href="#Applying_CSS_to_HTML">Diseño</a
+                    <a class="nav-link" href="#diseno">Diseño</a
             >
           </li>
           <li class="hvr-sweep-to-top">
-            <a class="nav-link" href="#Selectors">Divulgación</a>
+            <a class="nav-link" href="#divulgacion">Divulgación</a>
                 </li>
                 <li class="hvr-sweep-to-top">
-                    <a class="nav-link" href="#Specificity">Recursos Humanos</a>
+                    <a class="nav-link" href="#recursos-humanos">Recursos Humanos</a>
                 </li>
                 <li class="hvr-sweep-to-top">
-                    <a class="nav-link" href="#Properties_and_values">Relaciones Públicas</a
+                    <a class="nav-link" href="#relaciones-publicas">Relaciones Públicas</a
             >
           </li>
           <li class="hvr-sweep-to-top">
-            <a class="nav-link" href="#Reference">Revisión</a>
+            <a class="nav-link" href="#revision">Revisión</a>
                 </li>
             </ul>
         </div>
     </nav>
     <main id="main-doc">
-        <section class="main-section" id="Introduction">
+        <section class="main-section" id="departamentos">
             <header>Departamentos</header>
             <hr></hr>
             <p>
@@ -77,7 +77,7 @@
             </p>
         </section>
 
-        <section class="main-section" id="CSS_syntax">
+        <section class="main-section" id="delegados">
             <header>Departamento de Delegados</header>
             <div class="img-container">
                 <img src="img/9.png" alt="logo delegados" />
