--- a/documentos.html
+++ b/documentos.html
@@ -49,21 +49,19 @@
                     <a class="nav-link" href="#delegados">Delegados</a>
                 </li>
                 <li class="hvr-sweep-to-top">
-                    <a class="nav-link" href="#diseno">Diseño</a
-            >
-          </li>
-          <li class="hvr-sweep-to-top">
-            <a class="nav-link" href="#divulgacion">Divulgación</a>
+                    <a class="nav-link" href="#diseno">Diseño</a>
+                </li>
+                <li class="hvr-sweep-to-top">
+                    <a class="nav-link" href="#divulgacion">Divulgación</a>
                 </li>
                 <li class="hvr-sweep-to-top">
                     <a class="nav-link" href="#recursos-humanos">Recursos Humanos</a>
                 </li>
                 <li class="hvr-sweep-to-top">
-                    <a class="nav-link" href="#relaciones-publicas">Relaciones Públicas</a
-            >
-          </li>
-          <li class="hvr-sweep-to-top">
-            <a class="nav-link" href="#revision">Revisión</a>
+                    <a class="nav-link" href="#relaciones-publicas">Relaciones Públicas</a>
+                </li>
+                <li class="hvr-sweep-to-top">
+                    <a class="nav-link" href="#revision">Revisión</a>
                 </li>
             </ul>
         </div>
