--- a/documentos.html
+++ b/documentos.html
@@ -30,14 +30,11 @@
     <script src="https://kit.fontawesome.com/355497287f.js" crossorigin="anonymous"></script>
 </head>
 
-
-
 <body>
-
     <!-- Navbar -->
     <nav id="navbar">
         <div class="logo">
-            <i class="fab fa-css3-alt fa-3x"><a href="/"><img src="./img/logo.svg" alt="logo de MEPC"></a></i>
+            <a href="/"><img src="./img/logo.svg" alt="logo de MEPC"></a>
             <header>Documentos</header>
         </div>
         <div class="ul-container">
