--- a/documentos.html
+++ b/documentos.html
@@ -31,7 +31,28 @@
 </head>
 
 <body>
-    <!-- Navbar -->
+    <!-- Main navbar -->
+    <header class="main-header">
+        <nav class="navbar flex">
+            <div class="logo">
+                <a href="/"><img src="./img/logo.svg" alt="logo de MEPC"></a>
+            </div>
+            <ul class="nav-ul">
+                <li><a href="./">¿Quiénes somos?</a></li>
+                <li><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>
+                <li><a href="./que-estudiamos.html">¿Qué estudiamos?</a></li>
+                <li><a href="./documentos.html">Documentos</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
+            </ul>
+            <div class="button">
+                <div class="line-1"></div>
+                <div class="line-2"></div>
+                <div class="line-3"></div>
+            </div>
+        </nav>
+    </header>
+
+    <!-- Secondary navbar -->
     <nav id="navbar">
         <div class="logo">
             <a href="/"><img src="./img/logo.svg" alt="logo de MEPC"></a>
@@ -63,6 +84,8 @@
             </ul>
         </div>
     </nav>
+
+    <!-- Sections -->
     <main id="main-doc">
         <section class="main-section" id="departamentos">
             <header>Departamentos</header>
@@ -71,7 +94,6 @@
                 Los Departamentos son los ejes centrales de la organización de MEPC.
             </p>
         </section>
-
         <section class="main-section" id="delegados">
             <header>Departamento de Delegados</header>
             <div class="img-container">
@@ -97,10 +119,25 @@
                 </li>
             </ul>
         </section>
-
-
-
     </main>
+
+    <!-- Footer -->
+    <footer class="site-footer">
+        <div class="copyright">
+            <p>MEPC © 2021</p>
+            <p class="developed-by">Desarrollado con 💚 y <a href="https://github.com/francosbenitez/mepc" target="_blank" rel="noopener"><i class="fas fa-code-branch"></i></a> por <a href="https://francosbenitez.github.io" target="_blank" rel="noopener">Franco Sebastián Benítez</a></p>
+            <span class="float-right" aria-hidden="true">
+            <a href="#" class="back-to-top">
+                <span class="button-icon">
+                    <i class="fas fa-chevron-up fa-2x"></i>
+                </span>
+            </a>
+            </span>
+        </div>
+    </footer>
+    
+    <!-- JavaScript -->
+    <script src="js/navbar.js"></script>
 </body>
 
 </html>
