--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header class="main-header">
         <nav class="navbar flex">
             <div class="logo">
-                <a href="/"><img src="./img/logo.svg" alt="logo de MEPC"></a>
+                <a href="./"><img src="./img/logo.svg" alt="logo de MEPC"></a>
             </div>
             <ul class="nav-ul">
                 <li><a href="./">¿Quiénes somos?</a></li>
