--- a/documentos.html
+++ b/documentos.html
@@ -55,7 +55,7 @@
     <!-- Secondary navbar -->
     <nav id="navbar">
         <div class="logo">
-            <a href="/"><img src="./img/logo.svg" alt="logo de MEPC"></a>
+            <a href="./"><img src="./img/logo.svg" alt="logo de MEPC"></a>
             <header>Documentos</header>
         </div>
         <div class="ul-container">
