some additional changes!

--- a/index.html
+++ b/index.html
@@ -109,13 +109,14 @@
     <footer class="site-footer">
         <div class="copyright">
             <p>MEPC © 2021</p>
-            <p class="developed-by">Desarrollado con 💚 y <a href="https://github.com/francosbenitez/mepc" target="_blank" rel="noopener"><i class="fas fa-code-branch"></i></a> por <a href="https://francosbenitez.github.io" target="_blank" rel="noopener">Franco Sebastián Benítez</a></p>
+            <p class="developed-by">Desarrollado con 💚 y <a href="https://github.com/francosbenitez/mepc" target="_blank" rel="noopener"><i class="fas fa-code-branch"></i></a> por <a href="https://francosbenitez.github.io" target="_blank" rel="noopener">Franco Sebastián Benítez</a>
             <span class="float-right" aria-hidden="true">
             <a href="#" class="back-to-top">
                 <span class="button-icon">
                     <i class="fas fa-chevron-up fa-2x"></i>
                 </span>
             </a>
+            </p>
             </span>
         </div>
     </footer>
