--- a/index.html
+++ b/index.html
@@ -56,15 +56,13 @@
     <section id="quienes-somos">
 
         <!-- Hero -->
-        <div class="container-hero flex">
-            <div class="title flex">
+        <div class="container">
+            <div class="column-1 box">
                 <h1>¿Quiénes somos?</h1>
-            </div>
-            <div class="subtitle flex">
                 <h2>Somos una organización independiente de <br>estudiantes y graduados, que tenemos como<br> fin promover el pensamiento crítico y la<br> psicología científica, formarnos entre los<br> integrantes en temas afines y reclamar por<br> una formación
                     actualizada, plural y científica.</h2>
             </div>
-            <div class="hero-media flex">
+            <div class="column-2 box">
                 <img src="/img/hero.png" alt="logo de portada MEPC">
             </div>
         </div>
