--- a/que-estudiamos.html
+++ b/que-estudiamos.html
@@ -15,27 +15,25 @@
             <div class="title">
                 <h1>¿Qué estudiamos?</h1> 
             </div>
-            <div class="col-md-12">
-                <hr>
+            <hr>
 
                 <!-- Note -->
-                <div class="alert alert-note">
-                    <div>
+            <div class="alert-note">
+                <div>
                     Para saber más acerca de los grupos de estudio, pulsá encima de ellos. <br>
                     Si querés participar, sólo tenés que enviar un mail al grupo deseado. En breve te vamos a estar contactando.
-                    </div>
                 </div>
             </div>
 
             <!-- Subtitle -->
-            <div class="col-md-12">
-                <h2 class="mb-4">Grupos de estudio</h2>
+            <div class="subtitle">
+                <h2>Grupos de estudio</h2>
             </div>
 
             <!-- Groups -->
-            <div class="col-12 col-sm-auto people-person">
-                <a href="#"><img class="avatar" src="./img/avatar.jpg" alt="Avatar"></a>
-                <div class="portrait-title">
+            <div class="column">
+                <a href="#"><img class="avatar" src="./img/avatar.jpg" alt="Avatar Análisis Conductual Aplicado"></a>
+                <div class="avatar-title">
                 <h2><a href="#">Análisis Conductual Aplicado</a></h2> 
                     <ul class="network-icon" aria-hidden="true">
                         <li>
@@ -44,9 +42,9 @@
                     </ul> 
                 </div>
             </div>
-            <div class="col-12 col-sm-auto people-person">
-                <a href="#"><img class="avatar" src="./img/avatar.jpg" alt="Avatar"></a>
-                <div class="portrait-title">
+            <div class="column">
+                <a href="#"><img class="avatar" src="./img/avatar.jpg" alt="Avatar Ciencias Cognitivas"></a>
+                <div class="avatar-title">
                 <h2><a href="#">Ciencias Cognitivas</a></h2> 
                     <ul class="network-icon" aria-hidden="true">
                         <li>
