--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     actualizada, plural y científica.</h2>
             </div>
             <div class="column-2 box">
-                <img src="/img/hero.png" alt="logo de portada MEPC">
+                <img src="./img/hero.png" alt="logo de portada MEPC">
             </div>
         </div>
 
