add other departments & areas

--- a/documentos.html
+++ b/documentos.html
@@ -61,7 +61,7 @@
         <div class="ul-container">
             <ul>
                 <li class="hvr-sweep-to-top">
-                    <a class="nav-link" href="#departamentos">Departamentos</a>
+                    <a class="nav-link" href="#departamentos"><h1>Departamentos</h1></a>
                 </li>
                 <li class="hvr-sweep-to-top">
                     <a class="nav-link" href="#delegados">Delegados</a>
@@ -80,6 +80,21 @@
                 </li>
                 <li class="hvr-sweep-to-top">
                     <a class="nav-link" href="#revision">Revisión</a>
+                </li>
+                <li class="hvr-sweep-to-top">
+                    <a class="nav-link" href="#departamentos"><h1>Áreas</h1></a>
+                </li>
+                <li class="hvr-sweep-to-top">
+                    <a class="nav-link" href="#revision">Facebook</a>
+                </li>
+                <li class="hvr-sweep-to-top">
+                    <a class="nav-link" href="#revision">Twitter</a>
+                </li>
+                <li class="hvr-sweep-to-top">
+                    <a class="nav-link" href="#revision">YouTube</a>
+                </li>
+                <li class="hvr-sweep-to-top">
+                    <a class="nav-link" href="#revision">Instagram</a>
                 </li>
             </ul>
         </div>
