--- a/documentos.html
+++ b/documentos.html
@@ -56,12 +56,12 @@
     <nav id="navbar">
         <div class="logo">
             <a href="./"><img src="./img/logo.svg" alt="logo de MEPC"></a>
-            <header>Documentos</header>
+            <header><input type="text" id="search" onkeyup="myFunction()" placeholder="Buscar..."></header>
         </div>
         <div class="ul-container">
             <ul>
                 <li class="hvr-sweep-to-top">
-                    <a class="nav-link" href="#departamentos"><h1>Departamentos</h1></a>
+                    <a class="nav-link" href="#departamentos"><h1><i class="fas fa-book pr-1"></i> Departamentos</h1></a>
                 </li>
                 <li class="hvr-sweep-to-top">
                     <a class="nav-link" href="#delegados">Delegados</a>
@@ -82,7 +82,7 @@
                     <a class="nav-link" href="#revision">Revisión</a>
                 </li>
                 <li class="hvr-sweep-to-top">
-                    <a class="nav-link" href="#departamentos"><h1>Áreas</h1></a>
+                    <a class="nav-link" href="#departamentos"><h1><i class="fas fa-book-reader pr-1"></i> Áreas</h1></a>
                 </li>
                 <li class="hvr-sweep-to-top">
                     <a class="nav-link" href="#revision">Facebook</a>
