--- a/documentos.html
+++ b/documentos.html
@@ -133,6 +133,10 @@
                     </ul>
                 </li>
             </ul>
+            <h3>¿Cómo formar parte?</h3>
+            <p>
+                Enviando un mail a mepc.org@gmail.com.
+            </p>
         </section>
     </main>
 
