--- a/que-estudiamos.html
+++ b/que-estudiamos.html
@@ -1,13 +1,57 @@
 <!doctype html>
 <html lang="es">
 
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Movimiento Estudiantil por la Psicología Científica">
+    <meta name="author" content="MEPC">
+    <meta name="keywords" content="mepc psicologia cientifica">
+    <meta name="twitter:image:src" content="https://francosbenitez.github.io/mepc/img/social.png">
+    <meta property="og:image" content="https://francosbenitez.github.io/mepc/img/social.png">
+
+    <!-- Title -->
+    <title>¿Qué estudiamos? | Movimiento Estudiantil por la Psicología Científica - MEPC</title>
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="css/que-estudiamos.css">
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
     <!-- Font Awesome Icons -->
     <script src="https://kit.fontawesome.com/355497287f.js" crossorigin="anonymous"></script>
+</head>
 
 <body>
+
+    <!-- Navbar -->
+    <header class="main-header">
+        <nav class="navbar flex">
+            <div class="logo">
+                <a href="./"><img src="./img/logo.svg" alt="logo de MEPC"></a>
+            </div>
+            <ul class="nav-ul">
+                <li><a href="./">¿Quiénes somos?</a></li>
+                <li><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>
+                <li><a href="./que-estudiamos.html">¿Qué estudiamos?</a></li>
+                <li><a href="./documentos.html">Documentos</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
+            </ul>
+            <div class="button">
+                <div class="line-1"></div>
+                <div class="line-2"></div>
+                <div class="line-3"></div>
+            </div>
+        </nav>
+    </header>
     <div class="container">
         <div class="row">  
 
@@ -17,7 +61,7 @@
             </div>
             <hr>
 
-                <!-- Note -->
+            <!-- Note -->
             <div class="alert-note">
                 <div>
                     Para saber más acerca de los grupos de estudio, pulsá encima de ellos. <br>
@@ -55,6 +99,25 @@
             </div>
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer class="site-footer">
+        <div class="copyright">
+            <p>MEPC © 2021</p>
+            <p class="developed-by">Desarrollado con 💚 y <a href="https://github.com/francosbenitez/mepc" target="_blank" rel="noopener"><i class="fas fa-code-branch"></i></a> por <a href="https://francosbenitez.github.io" target="_blank" rel="noopener">Franco Sebastián Benítez</a>
+            <span class="float-right" aria-hidden="true">
+            <a href="#" class="back-to-top">
+                <span class="button-icon">
+                    <i class="fas fa-chevron-up fa-2x"></i>
+                </span>
+            </a>
+            </p>
+            </span>
+        </div>
+    </footer>
+    
+    <!-- JavaScript -->
+    <script src="js/navbar.js"></script>
 </body>
 
 </html>
