--- a/como-colaborar.html
+++ b/como-colaborar.html
@@ -21,7 +21,7 @@
     <link rel="manifest" href="/site.webmanifest">
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/como-colaborar.css">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -52,6 +52,28 @@
             </div>
         </nav>
     </header>
+
+    <!-- Features -->
+    <section class="features-section">
+        <div class="feature">
+            <i class="feature-icon"><img src="./img/azul1.png" alt="logo de MEPC"></i>
+            <p class="feature-title">Corré la voz</p>
+            <p class="feature-description">Una mejor educación es para todos. Ayudanos a correr la voz siguiéndonos y compartiendo 
+                nuestros contenidos en Twitter, YouTube, Facebook, Instagram y otras redes sociales.</p>
+        </div>
+        <div class="feature">
+            <i class="feature-icon"><img src="./img/azul2.png" alt="logo de MEPC"></i>
+            <p class="feature-title">Unite a nuestro equipo</p>
+            <p class="feature-description">Podés unirte a nuestros departamentos enviándonos un mail. 
+                También podés colaborar con el sitio web a través de GitHub.</p>
+        </div>
+        <div class="feature">
+            <i class="feature-icon"><img src="./img/azul3.png" alt="logo de MEPC"></i>
+            <p class="feature-title">Unite a nuestros grupos de estudio</p>
+            <p class="feature-description">Contamos con nueve grupos de estudio sobre diferentes temas relacionados a la psicología científica. 
+                ¡Sumándote a ellos podremos compartir y aprender en conjunto!</p>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="site-footer">
