--- a/como-colaborar.html
+++ b/como-colaborar.html
@@ -74,6 +74,20 @@
                 ¡Sumándote a ellos podremos compartir y aprender en conjunto!</p>
         </div>
     </section>
+    <section class="features-section">
+        <div class="feature">
+            <i class="feature-icon fab fa-whatsapp fa-2x"></i>
+            <p class="feature-title">Unite a nuestros grupos de WhatsApp</p>
+            <p class="feature-description">Contamos con dos grupos de WhatsApp (grupo 1 y grupo 2) 
+                para mantenernos actualizados sobre novedades en psicología científica.</p>
+        </div>
+        <div class="feature">
+            <i class="feature-icon fab fa-facebook fa-2x"></i>
+            <p class="feature-title">Unite a nuestro grupo de Facebook</p>
+            <p class="feature-description">Contamos con un grupo de Facebook con más de 3000 miembros 
+                entusiastas de la psicología científica.</p>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="site-footer">
