--- a/que-estudiamos.html
+++ b/que-estudiamos.html
@@ -75,28 +75,30 @@
             </div>
 
             <!-- Groups -->
-            <div class="column">
-                <a href="#"><img class="avatar" src="./img/avatar.jpg" alt="Avatar Análisis Conductual Aplicado"></a>
-                <div class="avatar-title">
-                <h2><a href="#">Análisis Conductual Aplicado</a></h2> 
-                    <ul class="network-icon" aria-hidden="true">
-                        <li>
-                            <a href="mailto:abaenpsicouba.mepc@gmail.com"><i class="fas fa-envelope"></i></a>
-                        </li>
-                    </ul> 
+            <section class="groups-section">
+                <div class="column">
+                    <a href="#"><img class="avatar" src="./img/avatar.jpg" alt="Avatar Análisis Conductual Aplicado"></a>
+                    <div class="avatar-title">
+                    <h2><a href="#">Análisis Conductual Aplicado</a></h2> 
+                        <ul class="network-icon" aria-hidden="true">
+                            <li>
+                                <a href="mailto:abaenpsicouba.mepc@gmail.com"><i class="fas fa-envelope"></i></a>
+                            </li>
+                        </ul> 
+                    </div>
                 </div>
-            </div>
-            <div class="column">
-                <a href="#"><img class="avatar" src="./img/avatar.jpg" alt="Avatar Ciencias Cognitivas"></a>
-                <div class="avatar-title">
-                <h2><a href="#">Ciencias Cognitivas</a></h2> 
-                    <ul class="network-icon" aria-hidden="true">
-                        <li>
-                            <a href="mailto:cs.cognitivas.mepc@gmail.com"><i class="fas fa-envelope"></i></a>
-                        </li>
-                    </ul>
+                <div class="column">
+                    <a href="#"><img class="avatar" src="./img/avatar.jpg" alt="Avatar Ciencias Cognitivas"></a>
+                    <div class="avatar-title">
+                    <h2><a href="#">Ciencias Cognitivas</a></h2> 
+                        <ul class="network-icon" aria-hidden="true">
+                            <li>
+                                <a href="mailto:cs.cognitivas.mepc@gmail.com"><i class="fas fa-envelope"></i></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
+            </section> 
         </div>
     </div>
 
