organizing como-colaborar

--- a/como-colaborar.html
+++ b/como-colaborar.html
@@ -57,19 +57,19 @@
     <section class="features-section">
         <div class="feature">
             <i class="feature-icon"><img src="./img/azul1.png" alt="logo de MEPC"></i>
-            <p class="feature-title">Corré la voz</p>
+            <h1 class="feature-title">Corré la voz</h1>
             <p class="feature-description">Una mejor educación es para todos. Ayudanos a correr la voz siguiéndonos y compartiendo 
                 nuestros contenidos en Twitter, YouTube, Facebook, Instagram y otras redes sociales.</p>
         </div>
         <div class="feature">
             <i class="feature-icon"><img src="./img/azul2.png" alt="logo de MEPC"></i>
-            <p class="feature-title">Unite a nuestro equipo</p>
+            <h1 class="feature-title">Unite a nuestro equipo</h1>
             <p class="feature-description">Podés unirte a nuestros departamentos enviándonos un mail. 
                 También podés colaborar con el sitio web a través de GitHub.</p>
         </div>
         <div class="feature">
             <i class="feature-icon"><img src="./img/azul3.png" alt="logo de MEPC"></i>
-            <p class="feature-title">Unite a nuestros grupos de estudio</p>
+            <h1 class="feature-title">Unite a nuestros grupos de estudio</h1>
             <p class="feature-description">Contamos con nueve grupos de estudio sobre diferentes temas relacionados a la psicología científica. 
                 ¡Sumándote a ellos podremos compartir y aprender en conjunto!</p>
         </div>
@@ -77,13 +77,13 @@
     <section class="features-section">
         <div class="feature">
             <i class="feature-icon fab fa-whatsapp fa-2x"></i>
-            <p class="feature-title">Unite a nuestros grupos de WhatsApp</p>
+            <h1 class="feature-title">Unite a nuestros grupos de WhatsApp</h1>
             <p class="feature-description">Contamos con dos grupos de WhatsApp (grupo 1 y grupo 2) 
-                para mantenernos actualizados sobre novedades en psicología científica.</p>
+                para mantenernos actualizados sobre novedades en psicología científica.</>
         </div>
         <div class="feature">
             <i class="feature-icon fab fa-facebook fa-2x"></i>
-            <p class="feature-title">Unite a nuestro grupo de Facebook</p>
+            <h1 class="feature-title">Unite a nuestro grupo de Facebook</h1>
             <p class="feature-description">Contamos con un grupo de Facebook con más de 3000 miembros 
                 entusiastas de la psicología científica.</p>
         </div>
